# Doc-Inc-UML-Code

./: .clang-format  Account.cpp  Account.h  Admin.cpp  Admin.h  AuditLog.cpp  AuditLog.h  AuthService.cpp  AuthService.h  CMakeLists.txt  Client.cpp  Client.h  Notification.cpp  Notification.h  Preference.cpp  Preference.h  README.md  Statement.cpp  Statement.h  StatementRepository.h  TransferService.cpp  TransferService.h  TransferServiceTest.cpp  User.cpp  User.h  UserTests.cpp
.github/workflows/: lint.yml  linter.yml  tests.yml
